bug fix NPCgen.html
removed inline block and added more dwarf names

--- a/NPCgen.html
+++ b/NPCgen.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -45,22 +45,11 @@
             background-color: #718355;
             box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
             padding: 10px 10px;
-            display: inline-block;
         }
         .center {
             padding: 30px 30px;
             text-align: center;
         }
-        .name-container ul {
-            padding-left: 0;
-            text-align: center;
-        }
-
-            .name-container ul li {
-                list-style-position: inside;
-                display: inline-block;
-                margin-right: 10px; 
-            }
        
 
     </style>
@@ -113,9 +102,49 @@
         const syl2Human = ["er", "den", "em", "ey", "ly", "ston", "on", "an", "en", "et", "ow", "ion", "un", "shaw", "ty", "yn", "ard", "ap", "man", "ger", "es", "or"];
         const last1Human = ["thal", "hunts", "bed", "prset", "tin", "mad", "hal", "leav", "hold", "corn", "hard", "thay", "bur", "barr", "he", "clo", "beck", "beau", "wild", "dust"];
         const last2Human = ["brook", "well", "ell", "ford", "ann", "ill", "bell", "itt", "burth", "ger", "and", "ery", "lor", "tch", "son", "rint", "ant", "skie", "ward", "ton"];
-        const syl1Dwarf = ["Th", "T", "k", "l", "dw", "d", "O", "a"];
+        const syl1Dwarf = ["Th", "T", "k", "l", "dw", "d", "O", "a",          "al",
+                "am",
+                "gar",
+                "bae",
+                "bru",
+                "Tho",
+                "Tor",
+                "Har",
+                "Aud",
+                "kris",
+                "mar",
+                "Stra",
+                "kat",
+                "ild",
+                "san",
+                "hel",
+                "bar",
+                "da",
+                "dar",
+                "tra",
+                "tak"];
         const syl2Dwarf = ["a", "i", "an", "on"];
-        const syl3Dwarf = ["rick", "ick", "al", "oin", "ili", "don", "dan", "din"];
+        const syl3Dwarf = ["rick", "ick", "al", "oin", "ili", "don", "dan", "din","in",
+                "en",
+                "er",
+                "ild",
+                "de",
+                "tra",
+                "era",
+                "wyn",
+                "vil",
+                "err",
+                "vok",
+                "il",
+                "eim",
+                "sword",
+                "heim",
+                "runn",
+                "gher",
+                "ryd",
+                "erk",
+                "ehr",
+                "eln"];
         const last1Dwarf = ["storm", "fire", "hammer", "wind", "forge", "might", "long", "short", "gray", "red", "green"];
         const last2Dwarf = ["forge", "und", "ind", "born", "storm", "sted", "ed", "led", "brand"];
         const eye = ["blue eyes", "brown eyes", "hazel eyes", "silver eyes", "green eyes", "black eyes", "red eyes"];
