--- a/lootgenerator.html
+++ b/lootgenerator.html
@@ -1,26 +1,35 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loot Generator</title>
     <style>
-        /* css eventually */
+        /* Your CSS styles here */
     </style>
 </head>
 <body>
     <h1>Loot Generator</h1>
 
+    <label for="difficulty">Difficulty:</label>
+    <select id="difficulty">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+    </select>
+
     <button id="generateButton">Generate Loot</button>
 
     <div id="lootGenerated">
-        <!-- loot will go here at some point (maybe inline???) -->
+        <!-- Generated loot will be displayed here -->
     </div>
 
     <script>const coins = ["bronze", "silver", "gold", "platinum"];
         const jewels = ["emerald", "jade", "ruby", "peridot", "diamond", "opal", "garnet"];
-        const commonMagic = ["potion of growth", "potion of poison", "potion of water breathing", "potion of jumping", "immovable rod", "staff of the python", "bag of holding", "bag of tricks", "cloak of elvenkind", "bag of tricks", "winged boots"];
-        const rareMagic = ["ring of evasion", "ring of feather falling", "ring of xray vision", "tentacle rod", "staff of healing"];
+        const commonMagic = ["potion of growth", "potion of poison", "potion of water breathing", "potion of jumping", "immovable rod", "staff of the python", "bag of holding", "bag of tricks", "cloak of elvenkind", "winged boots"];
+        const rareMagic = ["ring of evasion", "ring of feather falling", "ring of x-ray vision", "tentacle rod", "staff of healing"];
         const veryRareMagic = ["rod of absorption", "potion of speed", "+5 sword", "carpet of flying", "robe of stars"];
         const legendaryMagic = ["potion of giant strength", "rod of resurrection", "vorpal sword", "iron flask", "cubic gate", "cloak of invisibility"];
         const miscLoot = ["a token of a god", "a small animal statue", "a pouch of lavender", "a pouch of rosemary", "an empty leather pouch", "an unused journal", "a fork", "a pewter bell", "a dull knife", "a brass ring", "an iron ring", "a gold ring", "a brass bracelet", "a leather cord", "a wooden slingshot with some iron pellets"];
@@ -29,15 +38,42 @@
             return array[Math.floor(Math.random() * array.length)];
         }
 
+        function getRandomQuantity(max = 2) {
+            return Math.floor(Math.random() * max) + 1;
+        }
+
         document.getElementById('generateButton').addEventListener('click', function () {
-            const generatedCoins1 = getRandomElement(coins);
-            const generatedCoins2 = getRandomElement(coins);
-            const randomNumberOfCoins1 = Math.floor(Math.random() * 5) + 1; // Random number between 1 and 5
-            const randomNumberOfCoins2 = Math.floor(Math.random() * 5) + 1; // Random number between 1 and 5
+            const difficultyLevel = parseInt(document.getElementById('difficulty').value);
 
             const lootGeneratedDiv = document.getElementById('lootGenerated');
+            const generatedCoins = [];
+            if (Math.random() < (0.5 + (difficultyLevel - 1) * 0.1)) generatedCoins.push(`${getRandomQuantity(Math.ceil(2 + (difficultyLevel - 1) * 0.5))} ${getRandomElement(coins)}`);
+
+            const randomKarats = ((Math.floor(Math.random() * 5) + 1) * 0.5).toFixed(1);
+            const generatedJewel = Math.random() < (1 / 3) ? `${randomKarats} karats ${getRandomElement(jewels)}` : '';
+
+            const generatedMagic = [];
+            if (difficultyLevel >= 2 && Math.random() < (0.1 + (difficultyLevel - 2) * 0.1)) {
+                let maxMagicItems = 1;
+                if (difficultyLevel >= 3) maxMagicItems++;
+                if (difficultyLevel >= 5) maxMagicItems = 3;
+
+                generatedMagic.push(...Array.from({ length: getRandomQuantity(maxMagicItems) }, () => getRandomElement(commonMagic.concat(rareMagic, veryRareMagic, legendaryMagic))));
+            }
+
+            const generatedMiscLoot = [];
+            if (Math.random() < 0.5) {
+                const numMiscItems = getRandomQuantity();
+                for (let i = 0; i < numMiscItems; i++) {
+                    generatedMiscLoot.push(getRandomElement(miscLoot));
+                }
+            }
+
             lootGeneratedDiv.innerHTML = `
-                    <p>Coins: ${randomNumberOfCoins1} ${generatedCoins1}, ${randomNumberOfCoins2} ${generatedCoins2}</p>
+                    <p>Coins: ${generatedCoins.join(', ')}</p>
+                    <p>Jewel: ${generatedJewel}</p>
+                    <p>Magical Items: ${generatedMagic.join(', ')}</p>
+                    <p>Miscellaneous Loot: ${generatedMiscLoot.join(', ')}</p>
                 `;
         });</script>
 </body>
