--- a/lootgenerator.html
+++ b/lootgenerator.html
@@ -41,7 +41,7 @@
         function getRandomQuantity(max = 2) {
             return Math.floor(Math.random() * max) + 1;
         }
-
+//i sould abstract this lmao 
         document.getElementById('generateButton').addEventListener('click', function () {
             const difficultyLevel = parseInt(document.getElementById('difficulty').value);
 
